syntax = "proto3";

package authentication.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

import "pagination/v1/pagination.proto";

// 用户认证服务
service UserCredentialService {
  // 查询列表
  rpc List (pagination.PagingRequest) returns (ListUserCredentialResponse) {}

  // 统计数量
  rpc Count (pagination.PagingRequest) returns (CountUserCredentialResponse) {}

  // 查询
  rpc Get (GetUserCredentialRequest) returns (UserCredential) {}
  rpc GetByIdentifier (GetUserCredentialByIdentifierRequest) returns (UserCredential) {}

  // 创建
  rpc Create (CreateUserCredentialRequest) returns (google.protobuf.Empty) {}

  // 更新
  rpc Update (UpdateUserCredentialRequest) returns (google.protobuf.Empty) {}

  // 删除
  rpc Delete (DeleteUserCredentialRequest) returns (google.protobuf.Empty) {}


  // 验证凭证
  rpc VerifyCredential (VerifyCredentialRequest) returns (VerifyCredentialResponse) {}

  // 修改凭证
  rpc ChangeCredential (ChangeCredentialRequest) returns (google.protobuf.Empty) {}

  // 重设凭证
  rpc ResetCredential (ResetCredentialRequest) returns (google.protobuf.Empty) {}
}

// 用户凭证
message UserCredential {
  // 身份类型
  enum IdentityType {
    USERNAME = 0; // 用户名
    USERID = 1; // 用户ID
    EMAIL = 2; // 邮箱地址
    PHONE = 3; // 手机号

    // 通用的外部/第三方身份类型
    SOCIAL_OAUTH = 100;    // 社交平台 OAuth 认证
    ENTERPRISE_SSO = 200;  // 企业单点登录 (SAML/OIDC/AD)
    IDENTITY_API_KEY = 300;         // API 密钥 (用于服务间认证等)
    DEVICE_ID = 400;       // 设备标识符

    // 可扩展/自定义
    IDENTITY_CUSTOM = 1000;
    IDENTITY_RESERVED_FOR_FUTURE = 10000;
  }

  // 凭证类型
  enum CredentialType {
    TYPE_UNSPECIFIED = 0;

    // 密码类
    PASSWORD_HASH = 1;

    // API / 静态密钥
    API_KEY = 10;
    API_SECRET = 11;

    // 访问/刷新令牌
    ACCESS_TOKEN = 20;
    REFRESH_TOKEN = 21;
    JWT = 22;

    // OAuth / Social
    OAUTH_TOKEN = 30;
    OAUTH_AUTHORIZATION_CODE = 31;
    OAUTH_CLIENT_CREDENTIALS = 32;

    // OTP / 一次性密码与 MFA
    OTP = 40;
    TOTP = 41;
    SMS_OTP = 42;
    EMAIL_OTP = 43;

    // 设备 / 硬件 / 软件令牌
    HARDWARE_TOKEN = 50;
    SOFTWARE_TOKEN = 51;
    SECURITY_KEY = 52;

    // 生物识别
    BIOMETRIC = 60;
    BIOMETRIC_TOKEN = 61;

    // SSO / 断言
    SSO_TOKEN = 70;
    SAML_ASSERTION = 71;
    OPENID_CONNECT_ID_TOKEN = 72;

    // 临时 / 会话类
    SESSION_COOKIE = 80;
    TEMPORARY_CREDENTIAL = 81;

    // 其他 / 自定义
    CUSTOM = 200;
    RESERVED_FOR_FUTURE = 1000;
  }

  // 用户凭证状态
  enum Status {
    DISABLED = 0; // 凭证被禁用，用户无法使用该凭证进行认证（如账号被冻结）。
    ENABLED = 1; // 凭证有效，用户可正常使用该凭证登录或注册。
    EXPIRED = 2; // 凭证已过期（如临时凭证超期）。
    UNVERIFIED = 3; // 凭证未验证（需用户完成验证流程后才能生效）。
    REMOVED = 4; // 凭证已删除（逻辑删除，非物理删除，保留审计记录）。
    BLOCKED = 5; // 凭证被锁定（通常因多次错误尝试触发安全机制）。
    TEMPORARY = 6; // 临时凭证（仅在特定时间段内有效）。
  }

  uint32 id = 1; // 主键ID

  optional uint32 user_id = 2 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = {description: "关联主表的用户ID"}
  ];  // 关联主表的用户ID
  optional uint32 tenant_id = 3 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID"}
  ]; // 租户ID

  optional IdentityType identity_type = 10 [
    json_name = "identityType",
    (gnostic.openapi.v3.property) = {description: "认证方式类型，如用户名+密码、邮箱+密码、手机号+验证码、第三方平台认证等"}
  ]; // 认证方式类型
  optional string identifier = 11 [
    json_name = "identifier",
    (gnostic.openapi.v3.property) = {description: "身份唯一标识符，如果是密码登录，则是用户名；如果是邮箱登录，则是邮箱地址；如果是手机号登录，则是手机号；如果是第三方平台登录，则是第三方平台的唯一ID（如微信的OpenID）"}
  ]; // 身份唯一标识符

  optional CredentialType credential_type = 20 [
    json_name = "credentialType",
    (gnostic.openapi.v3.property) = {description: "凭证类型，如加密密码、访问令牌、刷新令牌等"}
  ]; // 凭证类型
  optional string credential = 21 [
    json_name = "credential",
    (gnostic.openapi.v3.property) = {description: "凭证，如果是密码登录，则是密码的hash值；如果是邮箱登录，则是邮箱的验证码；如果是手机号登录，则是手机号的验证码；如果是第三方平台登录，则是第三方平台的access_token"}
  ]; // 凭证

  optional bool is_primary = 30 [
    json_name = "isPrimary",
    (gnostic.openapi.v3.property) = { description: "是否主认证方式，如果用户同时绑定了邮箱和手机号，那么可以指定邮箱为主要认证方式。" }
  ]; // 是否主认证方式

  optional Status status = 31 [
    json_name = "status",
    (gnostic.openapi.v3.property) = { description: "凭证状态" }
  ]; // 凭证状态

  optional string extra_info = 32 [
    json_name = "extraInfo",
    (gnostic.openapi.v3.property) = { description: "扩展信息，如果是第三方平台认证，可以记录第三方平台的用户信息。" }
  ]; // 扩展信息

  optional string provider = 33 [
    json_name = "provider",
    (gnostic.openapi.v3.property) = { description: "第三方平台标识（如 google, wechat）" }
  ];   // 第三方平台标识（如 `google`, `wechat`），当 identity_type 为 SOCIAL_OAUTH/ENTERPRISE_SSO 时使用

  optional string provider_account_id = 34 [
    json_name = "providerAccountId",
    (gnostic.openapi.v3.property) = { description: "第三方平台的账号唯一ID" }
  ]; // 第三方平台的账号唯一ID（如 OpenID / unionid / sub）

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者用户ID"}]; // 创建者用户ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者用户ID"}]; // 更新者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}

// 查询列表 - 答复
message ListUserCredentialResponse {
  repeated UserCredential items = 1;
  uint64 total = 2;
}

// 更新 - 请求
message UpdateUserCredentialRequest {
  uint32 id = 1;

  UserCredential data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "要更新的字段列表",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // 要更新的字段列表

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。"},
    json_name = "allowMissing"
  ]; // 如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。
}

// 创建 - 请求
message CreateUserCredentialRequest {
  UserCredential data = 1;
}

// 删除 - 请求
message DeleteUserCredentialRequest {
  oneof delete_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID

    uint32 user_id = 2 [
      (gnostic.openapi.v3.property) = {description: "用户ID", read_only: true},
      json_name = "userId"
    ]; // 用户ID
  }
}

// 查询 - 请求
message GetUserCredentialRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

// 查询 - 请求
message GetUserCredentialByIdentifierRequest {
  UserCredential.IdentityType identity_type = 1 [
    json_name = "identityType", (gnostic.openapi.v3.property) = {description: "身份类型"}
  ]; // 身份类型

  string identifier = 2 [
    json_name = "identifier", (gnostic.openapi.v3.property) = {description: "身份唯一标识符"}
  ]; // 身份唯一标识符
}

// 验证凭证 - 请求
message VerifyCredentialRequest {
  UserCredential.IdentityType identity_type = 1 [
    json_name = "identityType", (gnostic.openapi.v3.property) = {description: "身份类型"}
  ]; // 身份类型

  string identifier = 2 [
    json_name = "identifier", (gnostic.openapi.v3.property) = {description: "身份唯一标识符"}
  ]; // 身份唯一标识符

  string credential = 3 [
    json_name = "credential", (gnostic.openapi.v3.property) = {description: "凭证"}
  ]; // 凭证

  bool need_decrypt = 4 [
    json_name = "needDecrypt", (gnostic.openapi.v3.property) = {description: "是否需要解码"}
  ]; // 是否需要解码
}
// 验证凭证 - 答复
message VerifyCredentialResponse {
  bool success = 1;
}

// 修改凭证 - 请求
message ChangeCredentialRequest {
  UserCredential.IdentityType identity_type = 1 [
    json_name = "identityType", (gnostic.openapi.v3.property) = {description: "身份类型"}
  ]; // 身份类型

  string identifier = 2 [
    json_name = "identifier", (gnostic.openapi.v3.property) = {description: "身份唯一标识符"}
  ]; // 身份唯一标识符

  string old_credential = 3 [
    json_name = "oldCredential", (gnostic.openapi.v3.property) = {description: "旧凭证"}
  ]; // 旧凭证

  string new_credential = 4 [
    json_name = "newCredential", (gnostic.openapi.v3.property) = {description: "新凭证"}
  ]; // 新凭证

  bool need_decrypt = 5 [
    json_name = "needDecrypt", (gnostic.openapi.v3.property) = {description: "是否需要解码"}
  ]; // 是否需要解码
}

// 重设凭证 - 请求
message ResetCredentialRequest {
  UserCredential.IdentityType identity_type = 1 [
    json_name = "identityType", (gnostic.openapi.v3.property) = {description: "身份类型"}
  ]; // 身份类型

  string identifier = 2 [
    json_name = "identifier", (gnostic.openapi.v3.property) = {description: "身份唯一标识符"}
  ]; // 身份唯一标识符

  string new_credential = 3 [
    json_name = "newCredential", (gnostic.openapi.v3.property) = {description: "新凭证"}
  ]; // 新凭证

  bool need_decrypt = 4 [
    json_name = "needDecrypt", (gnostic.openapi.v3.property) = {description: "是否需要解码"}
  ]; // 是否需要解码
}

message CountUserCredentialResponse {
  uint64 count = 1;
}
